postcss/testData/inspections/nesting/ruleInsideSupports.pcss
@supports (display: table-cell) and (display: list-item) {
  div {
    color: white;
  }

  <error descr="Top level ruleset selector should not contain '&'">&</error> div {
    color: red;
  }

  <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
      color: red;
  }
}

h1 {
  @supports (transform-style: preserve) {
    div {
      color: white;
    }

    <error descr="Top level ruleset selector should not contain '&'">&</error> div {
      color: red;
    }

    <error descr="Top level ruleset selector should not contain '@nest'">@nest</error> div <error descr="Top level ruleset selector should not contain '&'">&</error> {
        color: red;
    }
  }
}